fix banners not showing

--- a/AlanWalkerTheme/smallUserPopout.css
+++ b/AlanWalkerTheme/smallUserPopout.css
@@ -148,7 +148,6 @@
 .popoutBannerPremium-1n96gg,
 .bannerNormal-22rPhb {
   border-radius: 10px 10px 0px 0px;
-  width: auto;
 }
 .popoutInfo-pKbpvG {
   border: 1px solid rgb(var(--border-color-1), var(--border-opacity-1));
